--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,5 +1,5 @@
 .titlebox {
-    background-image: url('/public/css/background.jpg');
+    background-image: url('/public/css/img/background.jpg');
     background-size: 100%;
     background-repeat: no-repeat;
     width: 100%;
